Bug 787148 - Force synchronous repainting when the document state changes. r=roc