layout/base/nsPresShell.cpp
@@ -3994,6 +3994,9 @@ PresShell::DocumentStatesChanged(nsIDocument* aDocument,
     nsIFrame* root = mFrameConstructor->GetRootFrame();
     if (root) {
       root->InvalidateFrameSubtree();
+      if (root->HasView()) {
+        root->GetView()->SetForcedRepaint(true);
+      }
     }
   }
 }
